removes aplication.css

--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,3 +1,10 @@
-<h1>Almacen</h1>
-
-<%= link_to "Lista de materiales", fichas_path %>
+<div class="row">
+   <div class="col-md-3 col-xs-4">
+     <div class="panel panel-default">
+       <div class="panel-body button">
+         <i class="fa fa-list-ul"></i>
+         <%= link_to "Lista de materiales", fichas_path %>
+       </div>
+     </div>
+   </div>
+</div>
