--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,11 @@
+$body-bg: #aaa;
+
 @import "bootstrap";
 
 /*body */
 
-body {
-     
-
+body { 
+    
 }
 
 /* header */
@@ -16,5 +17,7 @@ body {
   filter: none;
 }
 
+.button {
+}
 
 /* footer */
