implementig first scenario with FactoryGirl

--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
    <div class="col-md-3 col-xs-4">
      <div class="panel panel-default">
-       <div class="panel-body button">
-         <i class="fa fa-list-ul"></i>
+       <div class="panel-body button center">
+         <i class="fa fa-list-ul fa-5x"></i><br>
          <%= link_to "Lista de materiales", fichas_path %>
        </div>
      </div>
