--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,7 +5,6 @@ $body-bg: #aaa;
 /*body */
 
 body { 
-    
 }
 
 /* header */
@@ -18,6 +17,7 @@ body {
 }
 
 .button {
+        text-align: center;
 }
 
 /* footer */
