adds csv import of ubicaciones

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
 <body>
 
   <%= render 'layouts/header' %>
+  <div class="spacefooter">
+  </div>
   <div class="container contents">
     <%= yield %>
+  </div>
+  <div class="spacefooter">
   </div>
   <%= render 'layouts/footer' %>
 
