--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -7,4 +7,13 @@
        </div>
      </div>
    </div>
+   <div class="col-md-3 col-xs-4">
+     <div class="panel panel-default">
+       <div class="panel-body button center">
+         <i class="fa fa-globe fa-5x"></i><br>
+         <%= link_to "Lista de ubicaciones", ubicacions_path %>
+       </div>
+     </div>
+   </div>
+
 </div>
