adds _table templates and bootstrap table to ficha, material, ubicacion

--- a/app/views/ubicacions/index.html.erb
+++ b/app/views/ubicacions/index.html.erb
@@ -1,41 +1,7 @@
 <h1>Ubicaciones</h1>
 
-<table class="table table-condensed">
-  <thead>
-    <tr>
-      <th>Codigo</th>
-      <th>Nombre</th>
-      <th>Ciudad</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
+<%= render 'ubicacions/table' %>
 
-  <tbody>
-    <% @ubicacions.each do |ubicacion| %>
-      <tr>
-        <td><%= link_to ubicacion.codigo, ubicacion %></td>
-        <td><%= ubicacion.nombre %></td>
-        <td><%= ubicacion.ciudad %></td>
-        <td>
-          <%= link_to ubicacion do %>
-          <i class="fa fa-eye"></i>
-          <% end %>
-        </td>
-
-        <td>
-          <%= link_to edit_ubicacion_path(ubicacion) do %>
-          <i class="fa fa-pencil-square-o"></i>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to ubicacion, method: :delete, data: { confirm: 'Are you sure?' } do %>
-          <i class="fa fa-trash"></i>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <%= link_to new_ubicacion_path do %>
 <i class="fa fa-file-text-o"></i> Nueva ubicación
