--- a/app/views/ubicacions/show.html.erb
+++ b/app/views/ubicacions/show.html.erb
@@ -15,5 +15,9 @@
   <%= @ubicacion.ciudad %>
 </p>
 
+
+<%= render 'materials/table' %>
+
+
 <%= link_to 'Edit', edit_ubicacion_path(@ubicacion) %> |
 <%= link_to 'Back', ubicacions_path %>
