--- a/app/views/fichas/index.html.erb
+++ b/app/views/fichas/index.html.erb
@@ -1,26 +1,6 @@
-<h1>Listing fichas</h1>
+<h1>Fichas</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Codigo</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @fichas.each do |ficha| %>
-      <tr>
-        <td><%= link_to ficha.nombre, ficha %></td>
-        <td><%= ficha.codigo %></td>
-        <td><%= link_to 'Show', ficha %></td>
-        <td><%= link_to 'Edit', edit_ficha_path(ficha) %></td>
-        <td><%= link_to 'Destroy', ficha, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'fichas/table' %>
 
 <br>
 
