finishes fichas features

--- a/app/views/fichas/index.html.erb
+++ b/app/views/fichas/index.html.erb
@@ -4,4 +4,6 @@
 
 <br>
 
-<%= link_to 'New Ficha', new_ficha_path %>
+<%= link_to new_ficha_path do %>
+<i class="fa fa-file-text-o"></i> Nueva Ficha
+<% end %>
