--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,25 +11,35 @@
         </button>
         <%= link_to Almacen, root_path, class:"navbar-brand" %>
       </div>
+      
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <!--
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Algo <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Algo</a></li>
+              <li><a href="#">Otro algo</a></li>
+              <li><a href="#">Otro otro algo</a></li>
               <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><a href="#">algo separado</a></li>
             </ul>
           </li>
         </ul>
         <form class="navbar-form navbar-right" role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" placeholder="Descripción">
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Buscar</button>
         </form>
+        -->
+        <%= form_tag(fichas_path, method:'get', class: "navbar-form navbar-right", id:"search_fichas") do %>
+          <div class="form-group">
+            <%= text_field_tag :search_fichas, value=nil, class:"form-control", placeholder: "Descripción" %>
+          </div>
+          <button type="submit" class="btn btn-default">Buscar</button>
+        <% end %>
+       
         
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
