--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
   <div class="spacefooter">
   </div>
   <div class="container contents">
+    <% if notice %>
+    <div id="notice"  class="alert alert-warning" role="alert">
+      <%= notice %>
+    </div>
+    <% end %>
     <%= yield %>
   </div>
   <div class="spacefooter">
