--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,12 @@ body {
 
 .button {
   text-align: center;
+  background-color: #e30613;
+  border: 1px;
+  border-radius: 5px;	
+  padding: 15px;
+  color:white;
+  margin: 15px;
 }
 
 .spacefooter {
