--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,19 +1,43 @@
 <div class="row">
-   <div class="col-md-3 col-xs-4">
-     <div class="panel panel-default">
-       <div class="panel-body button center">
-         <i class="fa fa-list-ul fa-5x"></i><br>
-         <%= link_to "Lista de materiales", fichas_path %>
-       </div>
+   <div class="col-md-3 col-xs-6">
+     <%= link_to fichas_path do %>
+     <div class="button">
+       <i class="fa fa-list-ul fa-5x"></i><br>
+       Lista de materiales
      </div>
+     <% end %>
    </div>
-   <div class="col-md-3 col-xs-4">
-     <div class="panel panel-default">
-       <div class="panel-body button center">
-         <i class="fa fa-globe fa-5x"></i><br>
-         <%= link_to "Lista de ubicaciones", ubicacions_path %>
-       </div>
+   <div class="col-md-3 col-xs-6">
+     <%= link_to  ubicacions_path do %>
+     <div class="button">
+       <i class="fa fa-globe fa-5x"></i><br>
+       Lista de ubicaciones
      </div>
+     <% end %>
+   </div>
+   <div class="col-md-3 col-xs-6">
+     <%= link_to negocio_unidads_path do %>     
+     <div class="button">
+       <i class="fa fa-archive fa-5x"></i><br>
+       Lista de unidades de negocio
+     </div>
+     <% end %>
    </div>
 
+   <div class="col-md-3 col-xs-6">
+     <%= link_to familias_path do %>     
+     <div class="button">
+       <i class="fa fa-cube fa-5x"></i><br>
+       Lista de familias
+     </div>
+     <% end %>
+   </div>
+   <div class="col-md-3 col-xs-6">
+     <%= link_to subfamilias_path do %>     
+     <div class="button">
+       <i class="fa fa-cubes fa-5x"></i><br>
+	 Lista de subfamilias
+     </div>
+     <% end %>
+   </div>
 </div>
