--- a/app/views/fichas/edit.html.erb
+++ b/app/views/fichas/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing ficha</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>Editing ficha</h1>
+    <%= render 'form' %>
+    <%= link_to 'Ver', @ficha %> |
+    <%= link_to 'Volver', fichas_path %>
+  </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @ficha %> |
-<%= link_to 'Back', fichas_path %>
