--- a/app/views/fichas/_form.html.erb
+++ b/app/views/fichas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@ficha) do |f| %>
+<%= bootstrap_form_for(@ficha) do |f| %>
   <% if @ficha.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@ficha.errors.count, "error") %> prohibited this ficha from being saved:</h2>
@@ -12,13 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nombre %><br>
     <%= f.text_field :nombre %>
   </div>
   <div class="field">
-    <%= f.label :codigo %><br>
     <%= f.text_field :codigo %>
   </div>
+  <div class="field">
+    <%= f.text_field :importancia %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
