--- a/app/views/fichas/new.html.erb
+++ b/app/views/fichas/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New ficha</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', fichas_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>New ficha</h1>
+    <%= render 'form' %>
+    <%= link_to 'Volver', fichas_path %>
+  </div>
+</div>
