--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,9 +35,11 @@
         -->
         <%= form_tag(fichas_path, method:'get', class: "navbar-form navbar-right", id:"search_fichas") do %>
           <div class="form-group">
-            <%= text_field_tag :search_fichas, value=nil, class:"form-control", placeholder: "Descripción" %>
+            <%= text_field_tag :search_fichas, value=nil, class:"form-control", placeholder: "Buscar fichas" %>
           </div>
-          <button type="submit" class="btn btn-default">Buscar</button>
+          <button type="submit" class="btn btn-default" id="buscar">
+	    <i class="fa fa-search"></i>
+	  </button>
         <% end %>
        
         
