--- a/app/views/fichas/new.html.erb
+++ b/app/views/fichas/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h1>New ficha</h1>
+    <h1>Nueva ficha</h1>
     <%= render 'form' %>
     <%= link_to 'Volver', fichas_path %>
   </div>
