fishes_with_csv

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,8 +3,14 @@
 /*body */
 
 body { 
+ 
 }
 
+.panel-heading {
+    color: #333;
+    background-color: #f9d616 !important;
+    border-color: #ddd;
+}
 /* header */
 
 .navbar {
