--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -3,7 +3,7 @@
     <%= link_to fichas_path do %>
     <div class="button">
       <i class="fa fa-list-ul fa-5x"></i><br>
-      Lista de materiales
+      Articulos
     </div>
     <% end %>
   </div>
