--- a/app/views/materials/edit.html.erb
+++ b/app/views/materials/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing material</h1>
+<h1>Editar material</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @material %> |
-<%= link_to 'Back', materials_path %>
+<%= link_to 'Ver', @material %> |
+<%= link_to 'Volver', materials_path %>
