--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Ficha:</strong>
-  <%= link_to @material.ficha.nombre, @material.ficha.nombre %>
+  <%= link_to @material.ficha.nombre, @material.ficha %>
 </p>
 
 <p>
