--- a/app/views/fichas/show.html.erb
+++ b/app/views/fichas/show.html.erb
@@ -22,6 +22,16 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
+        Categorías
+      </div>
+      <div class="panel-body">
+        <%= render 'subfamilias/table' %>
+        <%= link_to 'Nueva subfamilia', new_subfamilia_path %>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
         Stock
       </div>
       <div class="panel-body">
