--- a/app/views/subfamilias/new.html.erb
+++ b/app/views/subfamilias/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New subfamilia</h1>
+<h1>Nueva subfamilia</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', subfamilias_path %>
+<%= link_to 'Volver', subfamilias_path %>
