--- a/app/views/fichas/_form.html.erb
+++ b/app/views/fichas/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @ficha.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@ficha.errors.count, "error") %> prohibited this ficha from being saved:</h2>
-
       <ul>
       <% @ficha.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -10,7 +9,6 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= f.text_field :nombre %>
   </div>
@@ -20,7 +18,9 @@
   <div class="form-group">
     <%= f.select :importancia, "<option>A</option><option>B</option><option>C</option><option>D</option>".html_safe %>
   </div>
-
+  <div class="checkbox">
+    <%= f.collection_check_boxes(:subfamilia_ids, Subfamilia.all, :id, :nombre_completo) %>
+  </div>
   <div class="actions">
     <%= f.submit  %>
   </div>
