adds icon of fichas de proveedores

--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -36,7 +36,15 @@
      <%= link_to subfamilias_path do %>     
      <div class="button">
        <i class="fa fa-cubes fa-5x"></i><br>
-	 Lista de subfamilias
+	     Lista de subfamilias
+     </div>
+     <% end %>
+   </div>
+   <div class="col-md-3 col-xs-6">
+     <%= link_to ficha_proveedors_path do %>     
+     <div class="button">
+       <i class="fa fa-file-text-o fa-5x"></i><br>
+	     Fichas de proveedores
      </div>
      <% end %>
    </div>
