--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -48,4 +48,13 @@
      </div>
      <% end %>
    </div>
+      <div class="col-md-3 col-xs-6">
+     <%= link_to proyectos_path do %>     
+     <div class="button">
+       <i class="fa fa-book fa-5x"></i><br>
+	     Proyectos
+     </div>
+     <% end %>
+   </div>
+
 </div>
