adds fichas_proveedor to fichas

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,13 @@ a:hover {
   margin: 15px;
 }
 
+.button2 {
+  background-color: #e30613;
+  border-radius: 5px;	
+  color:white;
+}
+
+
 .spacefooter {
   height: 1.5cm;
 }
