--- a/app/views/ficha_proveedors/show.html.erb
+++ b/app/views/ficha_proveedors/show.html.erb
@@ -1,12 +1,16 @@
 <p id="notice"><%= notice %></p>
 
+<h1>
+  Ficha de proveedor
+</h1>
+
 <p>
   <strong>Nombre:</strong>
   <%= @ficha_proveedor.nombre %>
 </p>
 
 <p>
-  <strong>Codigo:</strong>
+  <strong>Codigo de proveedor:</strong>
   <%= @ficha_proveedor.codigo %>
 </p>
 
@@ -17,7 +21,7 @@
 
 <p>
   <strong>Ficha:</strong>
-  <%= @ficha_proveedor.ficha %>
+  <%= link_to @ficha_proveedor.ficha, @ficha_proveedor.ficha %>
 </p>
 
 <%= link_to 'Edit', edit_ficha_proveedor_path(@ficha_proveedor) %> |
