--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -11,7 +11,7 @@
     <%= link_to  ubicacions_path do %>
     <div class="button">
       <i class="fa fa-globe fa-5x"></i><br>
-      Lista de ubicaciones
+      Ubicaciones
     </div>
     <% end %>
   </div>
@@ -19,7 +19,7 @@
      <%= link_to negocio_unidads_path do %>     
      <div class="button">
        <i class="fa fa-archive fa-5x"></i><br>
-       Lista de unidades de negocio
+       Unidades de negocio
      </div>
      <% end %>
   </div>
@@ -28,7 +28,7 @@
      <%= link_to familias_path do %>     
      <div class="button">
        <i class="fa fa-cube fa-5x"></i><br>
-       Lista de familias
+       Familias
      </div>
      <% end %>
    </div>
@@ -36,7 +36,7 @@
      <%= link_to subfamilias_path do %>     
      <div class="button">
        <i class="fa fa-cubes fa-5x"></i><br>
-	     Lista de subfamilias
+	     Subfamilias
      </div>
      <% end %>
    </div>
