--- a/app/views/ficha_proveedors/_form.html.erb
+++ b/app/views/ficha_proveedors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@ficha_proveedor) do |f| %>
+<%= bootstrap_form_for(@ficha_proveedor) do |f| %>
   <% if @ficha_proveedor.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@ficha_proveedor.errors.count, "error") %> prohibited this ficha_proveedor from being saved:</h2>
@@ -12,19 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nombre %><br>
     <%= f.text_field :nombre %>
   </div>
   <div class="field">
-    <%= f.label :codigo %><br>
     <%= f.text_field :codigo %>
   </div>
   <div class="field">
-    <%= f.label :precio %><br>
     <%= f.text_field :precio %>
   </div>
+    <div class="field">
+    <%= f.text_area :observaciones %>
+  </div>
   <div class="field">
-    <%= f.label :ficha_id %><br>
     <%= f.text_field :ficha_id %>
   </div>
   <div class="actions">
