--- a/app/views/ficha_proveedors/new.html.erb
+++ b/app/views/ficha_proveedors/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New ficha_proveedor</h1>
+<h1>Nueva ficha de un proveedor</h1>
 
-<%= render 'form' %>
+<%= render partial: 'form' %>
 
 <%= link_to 'Back', ficha_proveedors_path %>
