--- a/app/views/ficha_proveedors/index.html.erb
+++ b/app/views/ficha_proveedors/index.html.erb
@@ -1,30 +1,7 @@
 <h1>Listing ficha_proveedors</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Codigo</th>
-      <th>Precio</th>
-      <th>Ficha</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @ficha_proveedors.each do |ficha_proveedor| %>
-      <tr>
-        <td><%= ficha_proveedor.nombre %></td>
-        <td><%= ficha_proveedor.codigo %></td>
-        <td><%= ficha_proveedor.precio %></td>
-        <td><%= ficha_proveedor.ficha %></td>
-        <td><%= link_to 'Show', ficha_proveedor %></td>
-        <td><%= link_to 'Edit', edit_ficha_proveedor_path(ficha_proveedor) %></td>
-        <td><%= link_to 'Destroy', ficha_proveedor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'ficha_proveedors/table' %>
 
 <br>
 
